# Agentic_AI-OpenAI_Agent_Sdk

./: .env  README.md  Runconfig.py  handsoff.py  hello.py  pyproject.toml  requirements.txt
01_Simple_Agent/: main.py
02_Openrouter/: readme.md
03_litellm_openai_agent/: .env  agent.py  pyproject.toml  readme.md
04_sync_async_streamed_agent/: .env  aysnc_agent.py  readme.md  simple_agent.py  streamed_agent.py
05_chainlit_agent/: hello.py  readme.md
06_global_level_agent/: README.md  agent.py  pyproject.toml
07_Runconfig_level_agent/: .env  Agent_level.py
08_Quickbot_memory_agent/: .env  README.md  frontend_agent.py  web_agent.py
09_guardrails_agent/: README.md  my_agent.py
10_Handoffs_Triage_Agent/: .env  README.md  handsoff.py  hello.py  pyproject.toml  readme.md  requirements.txt
Chatbot/: readme.md
OpenAI_Agent_Chatbot/AI_Powered_Chatbot/: hello.py  pyproject.toml
OpenAI_Chainlit_UI_Chatbot_Agent/AI_Powered_Chatbot/: .env  pyproject.toml
OpenAI_Chainlit_UI_Chatbot_Agent/AI_Powered_Chatbot/.chainlit/: config.toml
OpenAI_SDK/firstproject/src/firstproject/: main.py
OpenAI_SDK2/project2/: pyproject.toml
OpenAI_SDK2/project2/src/project2/: simple_agent.py
OpenAI_sdk_Chatbot_Agent/Chatbot/: pyproject.toml
OpenAI_sdk_Chatbot_Agent/Chatbot/src/chatbot/: aysnc_agent.py  streamed_agent.py
Openrouter/: simple_agent.py
Simple_Chatbot_Agent/: pyproject.toml
Simple_Chatbot_Agent/src/firstproject/: .env
chatbot/: pyproject.toml
chatbot/src/chatbot/: simple_agent.py  streamed_agent.py
