[project]
name = "firstproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hassan", email = "hr8581492@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.7",
]

[project.scripts]
firstproject = "firstproject:main"
agent = "firstproject.main:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
